# HeatTreatFurnace

./: .clang-format  .cursorignore  .cursorrules  .gitignore  API.md  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  EventMessageStorageDesign.md  PLAN_FSM_REFACTOR.md  StateTransitionTable.md  claude.md  platformio.ini  project.code-workspace
.aiassistant/rules/: apply-claude.md
.github/instructions/: rules.md
bdd/: about.feature  connection.feature  dashboard.feature  debug.feature  editor.feature  logs.feature  navigation.feature  preferences.feature  program-control.feature  programs-page.feature  simulator.feature  system-controls.feature
firmware/: PLAN.md  README.md
firmware/.cursor/rules/: cpp.mdc  esp32.mdc
firmware/esp32/: CMakeLists.txt
firmware/esp32/components/: README.md
firmware/esp32/components/spdlog/: CMakeLists.txt
firmware/esp32/main/: CMakeLists.txt  LogBackend.cpp  LogBackend.hpp  main.cpp
firmware/lib/: Enum.hpp  Strings.hpp
firmware/lib/Furnace/: Action.hpp  CMakeLists.txt  Furnace.cpp  Furnace.hpp  Profile.hpp  Result.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp
firmware/lib/HeatTreatFurnace/: CMakeLists.txt  EnumString.hpp  Safety.hpp  Strings.hpp  etl_profile.h
firmware/lib/HeatTreatFurnace/FSM/: EventQueue.hpp  EventQueueManager.cpp  EventQueueManager.hpp  Events.hpp  FurnaceFsm.cpp  FurnaceFsm.hpp  States.cpp  States.hpp  Types.hpp
firmware/lib/HeatTreatFurnace/Furnace/: Action.hpp  EventQueue.hpp  EventQueueManager.cpp  EventQueueManager.hpp  Events.hpp  Furnace.hpp  FurnaceFsm.cpp  FurnaceFsm.hpp  FurnaceState.cpp  FurnaceState.hpp  Profile.hpp  Result.hpp  State.hpp  StateId.hpp  StateMachine.cpp  StateMachine.hpp  StateTransitionTable.md  Types.hpp
firmware/lib/HeatTreatFurnace/Furnace/Mode/: ErrorState.cpp  ErrorState.hpp  ManualState.cpp  ManualState.hpp  OffState.hpp
firmware/lib/HeatTreatFurnace/Furnace/Profile/: Profile.hpp  ProfileCompletedState.cpp  ProfileCompletedState.hpp  ProfileLoadedState.cpp  ProfileLoadedState.hpp  ProfileRunningState.cpp  ProfileRunningState.hpp  ProfileState.cpp  ProfileState.hpp  ProfileStoppedState.cpp  ProfileStoppedState.hpp
firmware/lib/HeatTreatFurnace/Furnace/States/: CancelledState.cpp  CancelledState.hpp  CompletedState.cpp  CompletedState.hpp  ErrorState.cpp  ErrorState.hpp  IdleState.cpp  IdleState.hpp  LoadedState.cpp  LoadedState.hpp  ManualTempState.cpp  ManualTempState.hpp  PausedState.cpp  PausedState.hpp  ProfileTempOverrideState.cpp  ProfileTempOverrideState.hpp  RunningState.cpp  RunningState.hpp  StateId.hpp  States.hpp
firmware/lib/HeatTreatFurnace/Heater/: Heater.cpp  Heater.hpp
firmware/lib/HeatTreatFurnace/Log/: ConsoleLogBackend.cpp  ConsoleLogBackend.hpp  LogBackend.cpp  LogBackend.hpp  LogLevel.cpp  LogLevel.hpp  LogService.cpp  LogService.hpp
firmware/lib/HeatTreatFurnace/Profile/: Events.hpp  IdleState.cpp  Profile.hpp  ProfileFsm.cpp  ProfileFsm.hpp  RunningState.cpp  States.hpp
firmware/lib/Log/: API.md  CMakeLists.txt  ConsoleLogBackend.cpp  ConsoleLogBackend.hpp  Log.cpp  Log.hpp  LogBackend.cpp  LogBackend.hpp  LogService.cpp  LogService.hpp
firmware/test-app/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware/test-app/main/: CMakeLists.txt  test.cpp  test_StateMachine.cpp  test_main.cpp
firmware/test-app/main/FSM/: FsmTestFixture.hpp  test_CancelledState.cpp  test_CompletedState.cpp  test_ErrorState.cpp  test_IdleState.cpp  test_LoadedState.cpp  test_ManualTempState.cpp  test_PausedState.cpp  test_ProfileTempOverrideState.cpp  test_RunningState.cpp
firmware/test-app/mocks/: LogBackend.hpp
frontend/: BUGS.md  PLAN_SPA.md  build.js  config.conf  index.html  package-lock.json  package.json  tsconfig.json
frontend/programs/: 500c_10m_2h.json  pristige_optima.json  program1.json  program2.json  test_lowtemp.json  test_up_down.json  vfail1.json  vfail2.json
frontend/src/: commands.ts  flatbuffers.ts  main.ts  router.ts  state.ts  utils.ts  websocket.ts
frontend/src/chart/: dashboard.ts  preview.ts  profile.ts
frontend/src/types/: api.ts  state.ts  uplot.d.ts
frontend/src/ui/: statusbar.ts
frontend/src/views/: about.ts  debug.ts  logs.ts  preferences.ts  programs.ts
proto/: furnace.fbs
simulator/: .dockerignore  BUGS.md  Dockerfile  LIMITATIONS.md  README.md  SPECIFICATION.md  build.js  config.json  docker-compose.yml  package-lock.json  package.json  tsconfig.json
simulator/src/: config.ts  flatbuffers.ts  mock-data.ts  server.ts
